[gd_scene load_steps=23 format=3 uid="uid://clt0t03mmskn3"]

[ext_resource type="Script" path="res://Source/Entities/Characters/Player/player.gd" id="1_wrytd"]
[ext_resource type="Texture2D" uid="uid://cc43eiff2nt4k" path="res://Assets/Sprites/Player/player_cat_15.png" id="2_xo7n6"]
[ext_resource type="PackedScene" uid="uid://cfclve1df1vx3" path="res://Source/Modules/HitHurtBox/hurt_box.tscn" id="3_oxeg7"]
[ext_resource type="PackedScene" uid="uid://dt4aiya0qhcw6" path="res://Source/Entities/Guns/Pistol/pistol.tscn" id="7_rtcgh"]
[ext_resource type="Script" path="res://Source/Attributes/health_set.gd" id="8_8tumk"]
[ext_resource type="Script" path="res://Source/Attributes/movement_set.gd" id="9_4soej"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w3crt"]
radius = 12.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gubvu"]
radius = 12.0
height = 34.0

[sub_resource type="Animation" id="Animation_yami7"]
resource_name = "Attack 1"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_seh44"]
resource_name = "Attack 2"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_rkgvd"]
resource_name = "Attack 3"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_gcbqi"]
resource_name = "Dead"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_nkgi0"]
resource_name = "Fall"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [112, 113]
}

[sub_resource type="Animation" id="Animation_15rhk"]
resource_name = "Attack 1"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_acgng"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_bhx5l"]
resource_name = "Jump"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [104, 105]
}

[sub_resource type="Animation" id="Animation_28urg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fj1oo"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_y1g3w"]
resource_name = "Use Item"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86, 87]
}

[sub_resource type="Animation" id="Animation_aunfi"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvfg2"]
_data = {
"Attack 1": SubResource("Animation_yami7"),
"Attack 2": SubResource("Animation_seh44"),
"Attack 3": SubResource("Animation_rkgvd"),
"Dead": SubResource("Animation_gcbqi"),
"Fall": SubResource("Animation_nkgi0"),
"Hurt": SubResource("Animation_15rhk"),
"Idle": SubResource("Animation_acgng"),
"Jump": SubResource("Animation_bhx5l"),
"RESET": SubResource("Animation_28urg"),
"Run": SubResource("Animation_fj1oo"),
"Use Item": SubResource("Animation_y1g3w"),
"Walk": SubResource("Animation_aunfi")
}

[sub_resource type="Curve2D" id="Curve2D_wc83f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -47, -10.3817, -14.0353, 10.3817, 14.0353, 35, -32, -0.140308, -10.1022, 0.140308, 10.1022, 47, 0, 7.28653, -7.32349, -7.28653, 7.32349, 34, 33, 10.8265, -0.420448, -10.8265, 0.420448, 0, 48, 11.2966, 9.30734, -11.2966, -9.30734, -33, 34, 0.31498, 8.18949, -0.31498, -8.18949, -47, 0, -12.382, 14.4094, 12.382, -14.4094, -34, -33, 0, 0, 0, 0, 0, -47)
}
point_count = 9

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_wrytd")
gun = ExtResource("7_rtcgh")

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_w3crt")
metadata/_edit_lock_ = true

[node name="Sprite" type="Sprite2D" parent="Body"]
texture_filter = 1
position = Vector2(0, -2)
texture = ExtResource("2_xo7n6")
hframes = 8
vframes = 15

[node name="HurtBox" parent="Body" groups=["Player"] instance=ExtResource("3_oxeg7")]

[node name="Collision" parent="Body/HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_gubvu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Body")
libraries = {
"": SubResource("AnimationLibrary_yvfg2")
}

[node name="Guns" type="Node2D" parent="."]

[node name="Path" type="Path2D" parent="Guns"]
curve = SubResource("Curve2D_wc83f")
metadata/_edit_lock_ = true

[node name="Follow" type="PathFollow2D" parent="Guns/Path"]
position = Vector2(0, -47)
rotation = 0.404892

[node name="Attributes" type="Node2D" parent="."]

[node name="Health" type="Node" parent="Attributes"]
script = ExtResource("8_8tumk")
starting_health = 100.0
starting_max_health = 100.0

[node name="Movement" type="Node" parent="Attributes"]
script = ExtResource("9_4soej")
starting_speed = 150.0

[node name="StaggerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Body/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_stagger_timer_timeout"]

[editable path="Body/HurtBox"]
